@@ -39,6 +39,11 @@ CyclomaticComplexity.description=Measures the (McCabe) Cyclomatic Complexity of 
 CyclomaticComplexity.total=Complexity (total)
 CyclomaticComplexity.average=Complexity (average)
 
+FieldCount.description.html=Counts the number of fields within each class.
+FieldCount.description=Counts the number of fields within each class.
+FieldCount.total=Fields (total)
+FieldCount.average=Fields (average)
+
 MethodCount.description.html=Counts the number of methods within each class.
 MethodCount.description=Counts the number of methods within each class.
 MethodCount.total=Methods (total)
